Fix spacing and line for detail card

--- a/templates/NFT/NFTDetailPage/Details/Details.module.sass
+++ b/templates/NFT/NFTDetailPage/Details/Details.module.sass
@@ -13,7 +13,9 @@
 
 .col
     flex: 0 0 100%
+    width: 100%
     padding: rem(32)
+    border-bottom: rem(1) solid $n3
     +w
         padding: rem(24)
     +m
@@ -62,8 +64,10 @@
     display: flex
     justify-content: space-between
     align-items: center
-    padding: rem(32)
-    border-top: rem(1) solid $n3
+    padding-left: rem(32)
+    padding-top: rem(16)
+    padding-bottom: rem(16)
+    padding-right: rem(32)
     +w
         padding: rem(24)
     +d
